modified java compiler to 21v and fixed URL issues in files as it is depricated in 20v