@@ -1,16 +1,17 @@
 package com.example.driver.manager.remote.selenoid;
 
+import static com.example.utils.ConfigUtil.CONFIG;
+
+import java.net.URI;
+import java.net.URL;
+import lombok.SneakyThrows;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
-import lombok.SneakyThrows;
-import static com.example.utils.ConfigUtil.CONFIG;
-import java.net.URL;
 
 public final class SelenoidChromeManager {
 
-  private SelenoidChromeManager() {
-  }
+  private SelenoidChromeManager() {}
 
   @SneakyThrows
   public static WebDriver getDriver() {
@@ -21,7 +22,7 @@ public final class SelenoidChromeManager {
     capabilities.setCapability("enableVNC", true);
     capabilities.setCapability("enableVideo", false);
 
-    URL selenoidURL = new URL(CONFIG.getString("selenoidURL"));
+    URL selenoidURL = URI.create(CONFIG.getString("selenoidURL")).toURL();
     return new RemoteWebDriver(selenoidURL, capabilities);
   }
 }
